Change initial visibility of startScreen from initial to block after Lighthouse issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header > p {
 
 /* visibility */
 #startScreen {
-    display: initial;
+    display: block;
 }
 
 #gameScreen {
